@@ -108,7 +108,7 @@ enum redirfs_op_id {
 	/* REDIRFS_SOCK_DOP_D_NAME, */
 
 	REDIRFS_REG_IOP_PERMISSION,
-	/* REDIRFS_REG_IOP_SETATTR, */
+	REDIRFS_REG_IOP_SETATTR,
 
 	REDIRFS_DIR_IOP_CREATE,
 	REDIRFS_DIR_IOP_LOOKUP,
@@ -120,22 +120,22 @@ enum redirfs_op_id {
 	REDIRFS_DIR_IOP_MKNOD,
 	REDIRFS_DIR_IOP_RENAME,
 	REDIRFS_DIR_IOP_PERMISSION,
-	/* REDIRFS_DIR_IOP_SETATTR, */
+	REDIRFS_DIR_IOP_SETATTR,
 
 	REDIRFS_CHR_IOP_PERMISSION,
-	/* REDIRFS_CHR_IOP_SETATTR, */
+	REDIRFS_CHR_IOP_SETATTR,
 
 	REDIRFS_BLK_IOP_PERMISSION,
-	/* REDIRFS_BLK_IOP_SETATTR, */
+	REDIRFS_BLK_IOP_SETATTR,
 
 	REDIRFS_FIFO_IOP_PERMISSION,
-	/* REDIRFS_FIFO_IOP_SETATTR, */
+	REDIRFS_FIFO_IOP_SETATTR,
 
 	REDIRFS_LNK_IOP_PERMISSION,
-	/* REDIRFS_LNK_IOP_SETATTR, */
+	REDIRFS_LNK_IOP_SETATTR,
 
 	REDIRFS_SOCK_IOP_PERMISSION,
-	/* REDIRFS_SOCK_IOP_SETATTR, */
+	REDIRFS_SOCK_IOP_SETATTR,
 
 	REDIRFS_REG_FOP_OPEN,
 	REDIRFS_REG_FOP_RELEASE,
@@ -337,12 +337,10 @@ union redirfs_op_args {
 	} i_permission;
 #endif
 
-	/*
 	struct {
 		struct dentry *dentry;
 		struct iattr *iattr;
 	} i_setattr;
-	*/
 
 	struct {
 		struct inode *inode;
