@@ -27,6 +27,7 @@
 #include <linux/mount.h>
 #include <linux/wait.h>
 #include <linux/sched.h>
+#include <linux/quotaops.h>
 #include "redirfs.h"
 
 #define RFS_ADD_OP(ops_new, op) \
